--- a/assets/notebooks/customer-churn-prediction.ipynb
+++ b/assets/notebooks/customer-churn-prediction.ipynb
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current branch     : 1_optimize-churn-model\n",
+      "Current branch     : dev\n",
       "Current environment: dev\n"
      ]
     }
@@ -1029,8 +1029,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.98      0.94      0.96       168\n",
-      "         1.0       0.92      0.97      0.95       115\n",
+      "         0.0       0.99      0.93      0.96       168\n",
+      "         1.0       0.90      0.99      0.95       115\n",
       "\n",
       "    accuracy                           0.95       283\n",
       "   macro avg       0.95      0.96      0.95       283\n",
@@ -1341,7 +1341,7 @@
      "text": [
       "------------------------------------  --------------  ------------------------  -----------------\n",
       "ID                                    NAME            CREATED                   TYPE\n",
-      "a4276a6a-f4f5-4dae-8d3c-43d53e338372  churn_pipeline  2022-04-27T20:13:15.002Z  scikit-learn_0.23\n",
+      "516ba333-c541-4fd1-a314-0675f18311a6  churn_pipeline  2022-04-27T20:25:26.002Z  scikit-learn_0.23\n",
       "------------------------------------  --------------  ------------------------  -----------------\n"
      ]
     }
@@ -1384,13 +1384,13 @@
        "     'type': 'DataFrame'},\n",
        "    'type': 'fs'}],\n",
        "  'type': 'scikit-learn_0.23'},\n",
-       " 'metadata': {'created_at': '2022-04-27T20:13:15.848Z',\n",
-       "  'id': 'a4276a6a-f4f5-4dae-8d3c-43d53e338372',\n",
-       "  'modified_at': '2022-04-27T20:13:17.882Z',\n",
+       " 'metadata': {'created_at': '2022-04-27T20:25:26.719Z',\n",
+       "  'id': '516ba333-c541-4fd1-a314-0675f18311a6',\n",
+       "  'modified_at': '2022-04-27T20:25:28.674Z',\n",
        "  'name': 'churn_pipeline',\n",
-       "  'owner': '1000331006',\n",
-       "  'resource_key': '0c04d3b7-f5be-49bd-9a3b-e45670a041a7',\n",
-       "  'space_id': 'a6c9de4e-0a73-4584-8203-d849d22ba7d5'},\n",
+       "  'owner': '1000331007',\n",
+       "  'resource_key': 'e8df102a-e8b0-46bd-b515-289438ec2ba2',\n",
+       "  'space_id': 'ac607748-5296-4e1f-b53c-78f2466e98fc'},\n",
        " 'system': {'warnings': [{'message': 'Software specification default_py3.7_opence specified for the wml_model is deprecated and will be removed in the future. Please use a supported software specification instead. For details see Supported Frameworks https://www.ibm.com/docs/en/cloud-paks/cp-data/4.0?topic=specifications-supported-deployment-frameworks'}]}}"
       ]
      },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "ee7ee4b2-e8dc-40fc-af0e-a55f51a030ab",
     "tags": []
@@ -1420,12 +1420,22 @@
       "\n",
       "#######################################################################################\n",
       "\n",
-      "Synchronous deployment creation for uid: 'a4276a6a-f4f5-4dae-8d3c-43d53e338372' started\n",
+      "Synchronous deployment creation for uid: '516ba333-c541-4fd1-a314-0675f18311a6' started\n",
       "\n",
       "#######################################################################################\n",
       "\n",
       "\n",
-      "initializing"
+      "initializing\n",
+      "Note: Software specification default_py3.7_opence is deprecated. Use runtime-22.1-py3.9 software specification instead when saving a model. For details, see https://www.ibm.com/docs/en/cloud-paks/cp-data/4.0?topic=specifications-software-hardware-deployments.\n",
+      "\n",
+      "ready\n",
+      "\n",
+      "\n",
+      "------------------------------------------------------------------------------------------------\n",
+      "Successfully finished deployment creation, deployment_uid='f555dfe3-b538-4483-84a4-b7d920a92cb7'\n",
+      "------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -1442,12 +1452,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "f480d949-f24b-43a4-a814-f4fa1c32ba57",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://internal-nginx-svc.cpd-instance.svc.cluster.local:12443/ml/v4/deployments/f555dfe3-b538-4483-84a4-b7d920a92cb7/predictions\n"
+     ]
+    }
+   ],
    "source": [
     "deployment_uid = client.deployments.get_uid(created_deployment)\n",
     "scoring_endpoint = client.deployments.get_scoring_href(created_deployment)\n",
@@ -1465,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "6667bc4e-22a3-4cbb-ba79-785d048c97ae",
     "tags": []
@@ -1489,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "e3277c48-c12e-455a-8abd-b5af86fcb28f",
     "tags": []
@@ -1513,12 +1531,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "id": "d26c5cf2-fe85-4677-998d-430e4571a860",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------  --------------  ------------------------  -----------------\n",
+      "ID                                    NAME            CREATED                   TYPE\n",
+      "516ba333-c541-4fd1-a314-0675f18311a6  churn_pipeline  2022-04-27T20:25:26.002Z  scikit-learn_0.23\n",
+      "------------------------------------  --------------  ------------------------  -----------------\n",
+      "------------------------------------  -------------------------  -----  ------------------------\n",
+      "GUID                                  NAME                       STATE  CREATED\n",
+      "f555dfe3-b538-4483-84a4-b7d920a92cb7  churn_pipeline_deployment  ready  2022-04-27T20:25:29.859Z\n",
+      "------------------------------------  -------------------------  -----  ------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "client.repository.list_models()\n",
     "client.deployments.list()"
@@ -1535,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "3ccd14d0-7290-430d-adc9-6c525875b2d0",
     "tags": []
@@ -1553,12 +1586,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "e6221c43-ecbd-4595-a77f-9092e9bc644f",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"predictions\": [\n",
+      "    {\n",
+      "      \"fields\": [\n",
+      "        \"prediction\",\n",
+      "        \"probability\"\n",
+      "      ],\n",
+      "      \"values\": [\n",
+      "        [\n",
+      "          0.0,\n",
+      "          [\n",
+      "            1.0,\n",
+      "            0.0\n",
+      "          ]\n",
+      "        ]\n",
+      "      ]\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = client.deployments.score(deployment_uid, scoring_payload)\n",
     "print(json.dumps(predictions, indent=2))"
